QA: copy and minor layout issues

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -48,10 +48,11 @@
     }
 
     h2 {
-      color: $light-green;
+      color: $light-green !important;
       display: inline-block;
       font-weight: 500;
       letter-spacing: .03em;
+      margin-bottom: 0 !important;
       text-transform: uppercase;
       vertical-align: middle;
     }
