--- a/app/assets/stylesheets/utility.scss
+++ b/app/assets/stylesheets/utility.scss
@@ -18,6 +18,8 @@
 .u-fontSize2 { font-size: 2em !important; }
 .u-fontSize3 { font-size: 3em !important; }
 
+.u-underline { text-decoration: underline; }
+
 .u-alert {
   color: red;
   &:hover {
